src/main/java/com/example/movierecommendationapi/error/ResourceNotFound.java
package com.example.movierecommendationapi.error;

public class ResourceNotFound extends RuntimeException {
    public ResourceNotFound(String message) {
        super(message);
    }
}
